crates/sniff-test/tests/snapshots/fixtures__node_limit.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "node_limit",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "node-limit",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "analysis-incomplete": 1,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "raw-panic-paths": 0,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 1,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "raw-panic-paths": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": null,
            "kind": "analysis-incomplete",
            "level": "deny",
            "reason": "reachability analysis halted at the 4-instance node limit before the call graph was exhausted",
            "span": "src/lib.rs:24:1: 24:30",
            "target": null,
            "trace": []
          }
        ],
        "has-panic-docs": false,
        "root": "node_limit::deep_chain",
        "root-declaration": "src/lib.rs:24:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
