crates/sniff-test/tests/snapshots/fixtures__optimizer_pruning.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "optimizer_pruning::documented_inlinable_call",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "optimizer_pruning",
      "scope": "workspace"
    },
    "reason": "call to `optimizer_pruning::greater_than_zero` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "optimizer_pruning::documented_inlinable_call",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:7:1: 7:44",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:8:5: 8:26",
    "target": "optimizer_pruning::greater_than_zero",
    "trace": [
      "src/lib.rs:8:5: 8:26: optimizer_pruning::documented_inlinable_call --direct-call-> optimizer_pruning::greater_than_zero"
    ],
    "trace-id": "8a59e426"
  }
]
