crates/sniff-test/tests/snapshots/fixtures__panic_axioms.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "compiler-assert-kind": "division-by-zero",
    "kind": "compiler-assert",
    "level": "deny",
    "owner": {
      "crate": "panic_axioms",
      "package-name": "panic-axioms",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "compiler assertion (division by zero) has no recorded `// PANIC:` justification",
    "root": "panic_axioms::division",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:64",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:5: 2:29",
    "target": "compiler assert division by zero",
    "trace": [
      "src/lib.rs:2:5: 2:29: panic_axioms::division --assert-> compiler assert division by zero"
    ]
  },
  {
    "compiler-assert-kind": "bounds-check",
    "kind": "compiler-assert",
    "level": "deny",
    "owner": {
      "crate": "panic_axioms",
      "package-name": "panic-axioms",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "compiler assertion (index out of bounds) has no recorded `// PANIC:` justification",
    "root": "panic_axioms::indexed",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:9:1: 9:56",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:10:5: 10:18",
    "target": "compiler assert index out of bounds",
    "trace": [
      "src/lib.rs:10:5: 10:18: panic_axioms::indexed --assert-> compiler assert index out of bounds"
    ]
  },
  {
    "compiler-assert-kind": "remainder-by-zero",
    "kind": "compiler-assert",
    "level": "deny",
    "owner": {
      "crate": "panic_axioms",
      "package-name": "panic-axioms",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "compiler assertion (remainder with a zero divisor) has no recorded `// PANIC:` justification",
    "root": "panic_axioms::remainder",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:5:1: 5:64",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:6:5: 6:28",
    "target": "compiler assert remainder with a zero divisor",
    "trace": [
      "src/lib.rs:6:5: 6:28: panic_axioms::remainder --assert-> compiler assert remainder with a zero divisor"
    ]
  }
]
