crates/sniff-test/tests/snapshots/fixtures__panic_axioms_rerun.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: second_messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "panic_axioms",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "panic-axioms",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 4,
    "counts": {
      "analysis-incomplete": 0,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "raw-panic-paths": 4,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "raw-panic-paths": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::division --assert-> compiler assert attempt to divide `total_size` (_1, argument 1) by zero",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "src/lib.rs:2:5: 2:29",
            "target": "compiler assert attempt to divide `total_size` (_1, argument 1) by zero",
            "trace": [
              "src/lib.rs:2:5: 2:29: panic_axioms::division --assert-> compiler assert attempt to divide `total_size` (_1, argument 1) by zero"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::division",
        "root-declaration": "src/lib.rs:1:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "raw-panic-paths": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::indexed --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "src/lib.rs:10:5: 10:18",
            "target": "compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
            "trace": [
              "src/lib.rs:10:5: 10:18: panic_axioms::indexed --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::indexed",
        "root-declaration": "src/lib.rs:9:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "raw-panic-paths": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::remainder --assert-> compiler assert attempt to calculate the remainder of `total_size` (_1, argument 1) with a zero divisor",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "src/lib.rs:6:5: 6:28",
            "target": "compiler assert attempt to calculate the remainder of `total_size` (_1, argument 1) with a zero divisor",
            "trace": [
              "src/lib.rs:6:5: 6:28: panic_axioms::remainder --assert-> compiler assert attempt to calculate the remainder of `total_size` (_1, argument 1) with a zero divisor"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::remainder",
        "root-declaration": "src/lib.rs:5:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "raw-panic-paths": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::todo_macro --macro-expansion-> macro core::std::todo",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "src/lib.rs:14:5: 14:29",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "src/lib.rs:14:5: 14:29: panic_axioms::todo_macro --macro-expansion-> macro core::std::todo",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/macros/mod.rs:880:9: 880:82: macro core::std::todo --macro-expansion-> macro core::macros::panic",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/macros/mod.rs:880:9: 880:82: macro core::macros::panic --macro-expansion-> macro core::std::panic::panic_2021",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::todo_macro",
        "root-declaration": "src/lib.rs:13:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
