crates/sniff-test/tests/snapshots/fixtures__panic_requirements.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "panic_requirements::partially_satisfied",
    "kind": "effect",
    "level": "warn",
    "missing-requirements": [
      "bounded[total]: total must be bounded by the caller.",
      "audited"
    ],
    "owner": {
      "crate": "panic_requirements",
      "scope": "workspace"
    },
    "reason": "recorded `// PANIC:` justification for call to `panic_requirements::documented_ratio` with a documented `# Panics` obligation does not satisfy the remaining `# Panics` requirements",
    "requirements": [
      "nonzero: denominator must not be zero.",
      "bounded[total]: total must be bounded by the caller.",
      "audited"
    ],
    "root": "panic_requirements::partially_satisfied",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:24:1: 24:70",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:27:5: 27:41",
    "target": "panic_requirements::documented_ratio",
    "trace": [
      "src/lib.rs:27:5: 27:41: panic_requirements::partially_satisfied --direct-call-> panic_requirements::documented_ratio"
    ],
    "trace-id": "5033c94e"
  },
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "panic_requirements::reaches_documented_contract",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "panic_requirements",
      "scope": "workspace"
    },
    "reason": "call to `panic_requirements::documented_contract` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "panic_requirements::reaches_documented_contract",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:36:1: 36:47",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:37:5: 37:30",
    "target": "panic_requirements::documented_contract",
    "trace": [
      "src/lib.rs:37:5: 37:30: panic_requirements::reaches_documented_contract --direct-call-> panic_requirements::documented_contract"
    ],
    "trace-id": "80e10ff3"
  }
]
