crates/sniff-test/tests/snapshots/fixtures__partial_effect_requirements.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "function": "partial_effect_requirements::misses_both_requirements",
    "kind": "safety-obligation-missing-requirements",
    "level": "deny",
    "missing-requirements": [
      "exclusive: no other thread may access the global state"
    ],
    "owner": {
      "crate": "partial_effect_requirements",
      "package-name": "partial-effect-requirements",
      "package-version": "0.1.0",
      "scope": "dependency"
    },
    "reason": "dependency crate `partial_effect_requirements` has no recorded `// SAFETY:` evidence for call to `partial_effect_requirements::requires_initialized_exclusive_state` with a `# Safety` contract",
    "requirements": [
      "initialized: global state must be initialized",
      "exclusive: no other thread may access the global state"
    ],
    "root": "partial_effect_requirements_app::partially_satisfies_requirements",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:42",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "[FIXTURE]/dep/src/lib.rs:9:5: 9:43",
    "target": "partial_effect_requirements::requires_initialized_exclusive_state",
    "trace": [
      "src/lib.rs:4:5: 4:60: partial_effect_requirements_app::partially_satisfies_requirements --direct-call-> partial_effect_requirements::misses_both_requirements",
      "[FIXTURE]/dep/src/lib.rs:9:5: 9:43: partial_effect_requirements::misses_both_requirements --direct-call-> partial_effect_requirements::requires_initialized_exclusive_state"
    ]
  }
]
