crates/sniff-test/tests/snapshots/fixtures__report_roots_all.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "report_roots::private_panic",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "report_roots",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "report_roots::private_panic",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:7:1: 7:19",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:8:5: 8:27",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:8:5: 8:27: report_roots::private_panic --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:8:5: 8:27: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "03453eb7"
  },
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "report_roots::public_panic",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "report_roots",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "report_roots::public_panic",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:3:1: 3:22",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:4:5: 4:26",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:4:5: 4:26: report_roots::public_panic --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:4:5: 4:26: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "61dc4e2e"
  }
]
